--- a/package.json
+++ b/package.json
@@ -24,8 +24,19 @@
     "@ionic-native/splash-screen": "~4.20.0",
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
+    "@jiguang-ionic/jpush": "^1.0.2",
+    "cordova-android": "7.1.0",
+    "cordova-ios": "5.0.1",
+    "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-ionic-keyboard": "^2.1.3",
+    "cordova-plugin-ionic-webview": "^4.1.1",
+    "cordova-plugin-jcore": "^1.3.0",
+    "cordova-plugin-splashscreen": "^5.0.2",
+    "cordova-plugin-statusbar": "^2.4.2",
+    "cordova-plugin-whitelist": "^1.3.3",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
+    "jpush-phonegap-plugin": "^3.7.2",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.29"
@@ -34,5 +45,23 @@
     "@ionic/app-scripts": "3.2.2",
     "typescript": "~2.6.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-statusbar": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-ionic-keyboard": {},
+      "jpush-phonegap-plugin": {
+        "APP_KEY": "ebeeb168702e255b3c117c95",
+        "CHANNEL": "developer-default"
+      }
+    },
+    "platforms": [
+      "android",
+      "ios"
+    ]
+  }
 }
